oldalbum.web.frontend/src/main/frontend/src/App.css
.left-align-cell {
    display: flex;
    justify-content: flex-start;
}

.right-align-cell {
    display: flex;
    justify-content: flex-end;
}

.table-fixed { table-layout: fixed }

.dropdown-menu {
    min-width: 300px;
}

.transaction-table-col {
    max-width: 0;
}
.transaction-table-col-hide-overflow {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.transaction-table-col1 { width: 6em }
.transaction-table-col2 { width: 4em }
.transaction-table-col3 {  }

.hide-overflow { overflow-x: hidden; }

.fullsize-img-thumbnail {
    height: 75px;
    width: auto;
}

.keep-aspect-img-thumbnail {
    height: 100%;
    object-fit: contain;
    padding: .25rem;
    background-color: #fff;
    border: 1px solid #dee2e6;
    border-radius: .25rem;
    height: auto;
}

.album-entry {
    display: flex;
}

.album-entry-album {
    display: flex;
    align-items: center;
    justify-content: center;
}

@media screen and (max-width: 1500px) {
    .album-scroll-below-fixed-header {
        scroll-margin-top: 15rem;
    }
}

@media screen and not (max-width: 1500px) {
    .album-scroll-below-fixed-header {
        scroll-margin-top: 5rem;
    }
}

.picture-checkbox {
    opacity: 0;
}
.picture-checkbox:hover,
.picture-checkbox:checked {
    opacity: 1;
}

.album-yearlink {
    opacity: 0;
}
.album-yearlink:hover {
    opacity: 1;
}

.download-button {
    white-space: nowrap;
}

.table-condensed {
    font-size: 11px;
}

.img-fluid-landscape {
    height: 100%;
    width: auto;
}

.img-fluid-portrait {
    display: block;
    margin: 0 auto;
    width: 100%;
    max-height: calc(100vh - 155px);
    /* the largest image width */
    text-align: center;
    /* to center images of lesser width */
}

.img-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}


@media (orientation: portrait) {
    .hide-on-portrait {
        display: none;
    }
}

@media (orientation: landscape) {
    .hide-on-landscape {
        display: none;
    }
}

.oldalbum-modal {
    z-index: 10000;
}

